@@ -9,7 +9,7 @@ hashdeep \- Compute, compare, or audit multiple message digests
 .br
 .B hashdeep
 [-c <alg1>[,<alg2>]] [-k <file>] [-i <size>] [\-f <file>] 
-[\-o <fbcplsd>] [-amxwMXrespblvv] [\-F<bum>] [\-jnn] [\fBFILES\fR]
+[\-o <fbcplsde>] [-amxwMXrespblvv] [\-F<bum>] [\-jnn] [\fBFILES\fR]
 
 
 .SH DESCRIPTION
@@ -161,6 +161,8 @@ l \- Symbolic Links
 s \- Sockets
 .br
 d \- Solaris Doors
+.br
+e \- Windows PE executables
 
 
 .TP
